--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,7 @@ font-family: arial, sans-serif;
 }
 
 .weather-app {
-    max-width: 600px;
-    margin: 10px auto;
+    
     padding: 30px;
     border: 1px solid #dadde1;
     border-radius: 4px;
@@ -16,4 +15,50 @@ h1 {
     font-weight: 100;
     line-height: 28px;
     margin-bottom: 0;
+}
+
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li{
+    list-style: none;
+    margin: 0;
+    padding:0;
+    color: rgb(135, 135, 135);
+    font-size: 16px;
+    font-weight: 100;
+    line-height: 19px;
+}
+
+.weather-app-wrapper{
+    max-width: 600px;
+    margin: 40px auto;
+
+}
+
+.overview{
+    margin-bottom: 20px;
+}
+
+.weather-temperature .img {
+    margin-right: 5px;
+    height: 64px;
+    width: 64px;
+}
+
+.weather-temperature strong{
+    color: rgb(33,33,33);
+    font-size: 64px;
+    line-height: 1;
+    font-weight: 400;
+}
+
+.weather-temperature .units {
+    position: relative;
+    font-size: 16px;
+    top: -34px;
+
 }
