--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,7 @@ li{
     list-style: none;
     margin: 0;
     padding:0;
+    text-transform: capitalize;
     color: rgb(135, 135, 135);
     font-size: 16px;
     font-weight: 100;
@@ -35,7 +36,7 @@ li{
 
 .weather-app-wrapper{
     max-width: 600px;
-    margin: 40px auto;
+    margin: 0px auto;
 
 }
 
