--- a/src/styles.css
+++ b/src/styles.css
@@ -64,5 +64,21 @@ li:first-letter{
     position: relative;
     font-size: 16px;
     top: -34px;
+    text-decoration: none;
 
+}
+
+.weather-temperature .active{
+    color: rgb(33, 33, 33);
+    text-decoration:none;
+    cursor: default;
+}
+
+.weather-temperature .active:hover{
+    text-decoration: none;
+    cursor: default;
+}
+
+.weather-temperature .fahrenheit-icon {
+    text-decoration: none;
 }
